--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,8 @@
 @import 'libs/mixins';
 @import 'libs/skel';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic');
+// @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans+Pro:300,300italic,600,600italic');
 
 /*
 	Forty by HTML5 UP
