--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -40,6 +40,7 @@
 		highlight:			#9bf1ff,
 		accent1:			black,
 		accent2:			black,
+		accent3:			black,
 		accent4:			#e7b788,
 		accent5:			#8ea9e8,
 		accent6:			#87c5a4
