--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -66,7 +66,7 @@
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
 
 		a {
-			color: inherit;
+			color: _palette(fg-tiles);
 			border-bottom: 0;
 		}
 	}
