--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -16,17 +16,30 @@
 		background-color: _palette(bg-alt);
 		box-shadow: 0 0 0.25em 0 rgba(0,0,0,0.15);
 		cursor: default;
-		font-weight: _font(weight-bold);
-		height: 3.25em;
+		//font-weight: _font(weight-bold);
+		height: 4em;
 		left: 0;
-		letter-spacing: _font(letter-spacing-alt);
-		line-height: 3.25em;
+		//letter-spacing: _font(letter-spacing-alt);
+		line-height: 4em;
 		margin: 0;
 		position: fixed;
-		text-transform: uppercase;
+		//text-transform: uppercase;
 		top: 0;
 		width: 100%;
 		z-index: _misc(z-index-base);
+
+		#menu {
+			text-transform: uppercase;
+		}
+
+		.headLogo {
+			display: block;
+			border: 0;
+			font-size: 1.5em;
+			font-weight: _font(weight-bold);
+			height: inherit;
+			line-height: inherit;
+		}
 
 		.logo {
 			border: 0;
