Creating projects pages

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -35,14 +35,14 @@
 		fg:					white,
 		fg-bold:			white,
 		fg-tiles:			white,
-		fg-light:			rgba(244,244,255,0.2),
+		fg-light:			rgba(155,213,226,0.2),
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
-		highlight:			#f8c95a,
-		accent1:			#1c59a5,
-		accent2:			#9bd5e2,
-		accent3:			#f8c95a,
-		accent4:			#1c59a5,
-		accent5:			#9bd5e2,
-		accent6:			#f8c95a
+		highlight:			#9bd5e2,
+		accent1:			#303030,
+		accent2:			#111111,
+		accent3:			#050505,
+		accent4:			#303030,
+		accent5:			#111111,
+		accent6:			#111111
 	);
