--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,11 @@
 
 <!-- Header -->
 <header id="header"{% if page.layout == "landing" %} class="alt style2"{% endif %}{% if page.layout == "home" %} class="alt"{% endif %}>
-	<!--<a href="{{ "" | absolute_url }}/" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>-->
-	<a href="{{ "" | absolute_url }}/" class="logo"><span class="headLogo">Gestographie</span></a>
+	<a href="{{ "" | absolute_url }}/" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
+	<!--<a href="{{ "" | absolute_url }}/" class="logo"><span class="headLogo">Gestographie</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
-	</nav>
+	</nav>-->
 </header>
 
 <!-- Menu -->
