Adjusting the menu display

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    {% include header.html %}
+    {% include header_home.html %}
 
     <!-- Banner -->
     <!-- <section id="banner" class="major">
